force-app/main/default/objects/Account/fields/TXT_CNPJ__c.field-meta.xml
<CustomField>
    <fullName>TXT_CNPJ__c</fullName>
    <label>CNPJ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>