force-app/main/default/objects/Account/fields/TXT_Nome_Fantasia__c.field-meta.xml
<CustomField>
    <fullName>TXT_Nome_Fantasia__c</fullName>
    <label>Nome Fantasia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>