force-app/main/default/objects/Account/validationRules/CNPJ_Validator.validationRule-meta.xml
<ValidationRule>
    <fullName>CNPJ_Validator</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(LEN(TXT_CNPJ__c)=14,ISNUMBER(TXT_CNPJ__c)),
OR(
AND(MOD((
(VALUE(MID(TXT_CNPJ__c,1,1))*6)+
(VALUE(MID(TXT_CNPJ__c,2,1))*5)+
(VALUE(MID(TXT_CNPJ__c,3,1))*4)+
(VALUE(MID(TXT_CNPJ__c,4,1))*3)+
(VALUE(MID(TXT_CNPJ__c,5,1))*2)+
(VALUE(MID(TXT_CNPJ__c,6,1))*9)+
(VALUE(MID(TXT_CNPJ__c,7,1))*8)+
(VALUE(MID(TXT_CNPJ__c,8,1))*7)+
(VALUE(MID(TXT_CNPJ__c,9,1))*6)+
(VALUE(MID(TXT_CNPJ__c,10,1))*5)+
(VALUE(MID(TXT_CNPJ__c,11,1))*4)+
(VALUE(MID(TXT_CNPJ__c,12,1))*3)+
(VALUE(MID(TXT_CNPJ__c,13,1))*2))
,11)&lt;=1,
VALUE(MID(TXT_CNPJ__c,14,1))!=0),
AND(MOD((
(VALUE(MID(TXT_CNPJ__c,1,1))*6)+
(VALUE(MID(TXT_CNPJ__c,2,1))*5)+
(VALUE(MID(TXT_CNPJ__c,3,1))*4)+
(VALUE(MID(TXT_CNPJ__c,4,1))*3)+
(VALUE(MID(TXT_CNPJ__c,5,1))*2)+
(VALUE(MID(TXT_CNPJ__c,6,1))*9)+
(VALUE(MID(TXT_CNPJ__c,7,1))*8)+
(VALUE(MID(TXT_CNPJ__c,8,1))*7)+
(VALUE(MID(TXT_CNPJ__c,9,1))*6)+
(VALUE(MID(TXT_CNPJ__c,10,1))*5)+
(VALUE(MID(TXT_CNPJ__c,11,1))*4)+
(VALUE(MID(TXT_CNPJ__c,12,1))*3)+
(VALUE(MID(TXT_CNPJ__c,13,1))*2))
,11)&gt;1,
(11-MOD((
(VALUE(MID(TXT_CNPJ__c,1,1))*6)+
(VALUE(MID(TXT_CNPJ__c,2,1))*5)+
(VALUE(MID(TXT_CNPJ__c,3,1))*4)+
(VALUE(MID(TXT_CNPJ__c,4,1))*3)+
(VALUE(MID(TXT_CNPJ__c,5,1))*2)+
(VALUE(MID(TXT_CNPJ__c,6,1))*9)+
(VALUE(MID(TXT_CNPJ__c,7,1))*8)+
(VALUE(MID(TXT_CNPJ__c,8,1))*7)+
(VALUE(MID(TXT_CNPJ__c,9,1))*6)+
(VALUE(MID(TXT_CNPJ__c,10,1))*5)+
(VALUE(MID(TXT_CNPJ__c,11,1))*4)+
(VALUE(MID(TXT_CNPJ__c,12,1))*3)+
(VALUE(MID(TXT_CNPJ__c,13,1))*2))
,11))!=VALUE(MID(TXT_CNPJ__c,14,1))
)
),
true
)</errorConditionFormula>
    <errorMessage>Preencha o CNPJ corretamente, 14 numeros apenas.</errorMessage>
</ValidationRule>